--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="splash-screen">
-        <img id="splash-logo" src="URL_DE_TU_LOGO.png" alt="Logo de Caminos de Libertad A.C.">
+        <img id="splash-logo" src="logocaminos.png" alt="Logo de Caminos de Libertad A.C.">
     </div>
 
     <audio id="background-music" loop autoplay muted>
@@ -25,7 +25,7 @@
     </div>
 
     <div id="donaciones" class="container section">
-        <img src="URL_DE_TU_LOGO.png" alt="Logo de Caminos de Libertad A.C." class="logo-main">
+        <img src="logocaminos.png" alt="Logo de Caminos de Libertad A.C." class="logo-main">
         <h1>Apoya a Caminos de Libertad A.C.</h1>
         <p>Tu donación nos permite defender legalmente a personas inocentes en México.</p>
         <a href="https://paypal.me/CAMINOSDELIBERTAD" class="donation-button">Donar Ahora</a>
@@ -51,4 +51,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
