--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
     </div>
 
     <div id="donaciones" class="container section">
-    <img src="logocaminos.png" alt="Logo de Caminos de Libertad A.C." class="logo-main">
-    <h1>Apoya a Caminos de Libertad A.C.</h1>
-    <p>Tu donación nos permite defender legalmente a personas inocentes en México.</p>
-    <img src="donar.jpeg" alt="Imagen de donación" style="max-width: 100%; height: auto; margin-bottom: 20px;">
-    <a href="https://paypal.me/CAMINOSDELIBERTAD" class="donation-button">Donar Ahora</a>
-</div>
+        <img src="logocaminos.png" alt="Logo de Caminos de Libertad A.C." class="logo-main">
+        <h1>Apoya a Caminos de Libertad A.C.</h1>
+        <p>Tu donación nos permite defender legalmente a personas inocentes en México.</p>
+        <img src="donar.jpeg" alt="Imagen de donación" style="max-width: 100%; height: auto; margin-bottom: 20px;">
+        <a href="https://paypal.me/CAMINOSDELIBERTAD" class="donation-button">Donar Ahora</a>
+    </div>
 
     <div id="quienes-somos" class="container section">
-    <h2>Quiénes Somos</h2>
-    <div style="display: flex; justify-content: center; gap: 20px;">
-        <img src="hugo.jpeg" alt="Descripción de la imagen 1" style="width: 45%; height: auto;">
-        <img src="suzet.jpeg" alt="Descripción de la imagen 2" style="width: 45%; height: auto;">
+        <h2>Quiénes Somos</h2>
+        <div style="display: flex; justify-content: center; gap: 20px;">
+            <img src="hugo.jpeg" alt="Lic. Hugo M. López" style="width: 45%; height: auto;">
+            <img src="suzet.jpeg" alt="Lic. Suzeth León Soria" style="width: 45%; height: auto;">
+        </div>
+        <p>Somos un equipo dedicado de profesionales del derecho, encabezado por el Lic. Hugo M. López y la Lic. Suzeth León Soria. Nuestra misión es clara y firme: defender la justicia y la verdad. Creemos profundamente que nadie debería ser castigado por un delito que no cometió. Por ello, hemos unido nuestras fuerzas para litigar y brindar apoyo legal a personas que han sido injustamente sentenciadas. Nuestro trabajo es completamente altruista, impulsado por el compromiso de buscar la acreditación de la inocencia y restituir la libertad a quienes la han perdido de manera injusta.</p>
     </div>
-    <p>Somos un equipo dedicado de profesionales del derecho, encabezado por el Lic. Hugo M. López y la Lic. Suzeth León Soria. Nuestra misión es clara y firme: defender la justicia y la verdad. Creemos profundamente que nadie debería ser castigado por un delito que no cometió. Por ello, hemos unido nuestras fuerzas para litigar y brindar apoyo legal a personas que han sido injustamente sentenciadas. Nuestro trabajo es completamente altruista, impulsado por el compromiso de buscar la acreditación de la inocencia y restituir la libertad a quienes la han perdido de manera injusta.</p>
-</div>
 
-   <div id="que-hacemos" class="container section">
-    <h2>Qué Hacemos</h2>
-    <div style="display: flex; justify-content: space-around; gap: 20px;">
-        <img src="reclusoriobordoneza.jpg" alt="Descripción de la imagen 1" style="width: 30%; height: auto;">
-        <img src="reclusoriochiconautla.jpg" alt="Descripción de la imagen 2" style="width: 30%; height: auto;">
-        <img src="reclusoriotlalnepantla.jpg" alt="Descripción de la imagen 3" style="width: 30%; height: auto;">
+    <div id="que-hacemos" class="container section">
+        <h2>Qué Hacemos</h2>
+        <div style="display: flex; justify-content: space-around; gap: 20px;">
+            <img src="reclusoriobordoneza.jpg" alt="Imagen de reclusorio de Bordonaza" style="width: 30%; height: auto;">
+            <img src="reclusoriochiconautla.jpg" alt="Imagen de reclusorio de Chiconautla" style="width: 30%; height: auto;">
+            <img src="reclusoriotlalnepantla.jpg" alt="Imagen de reclusorio de Tlalnepantla" style="width: 30%; height: auto;">
+        </div>
+        <p>Nuestro proceso comienza con la empatía y la escucha. Nos entrevistamos personalmente con los familiares de las personas sentenciadas y escuchamos su historia, su dolor y su esperanza. Después, tenemos un diálogo directo y humano con el sentenciado. Tras un análisis exhaustivo de cada caso y la comprobación irrefutable de su inocencia, procedemos a iniciar su defensa legal, sin ningún costo para ellos o sus familias. Nuestra meta es una sola: obtener su libertad.</p>
     </div>
-    <p>Nuestro proceso comienza con la empatía y la escucha. Nos entrevistamos personalmente con los familiares de las personas sentenciadas y escuchamos su historia, su dolor y su esperanza. Después, tenemos un diálogo directo y humano con el sentenciado. Tras un análisis exhaustivo de cada caso y la comprobación irrefutable de su inocencia, procedemos a iniciar su defensa legal, sin ningún costo para ellos o sus familias. Nuestra meta es una sola: obtener su libertad.</p>
-</div>
 
     <div id="contacto" class="container section">
         <h2>Contacto</h2>
