--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div id="contacto" class="container section">
         <h2>Contacto</h2>
-        <img src="NOMBRE_DE_TU_IMAGEN_DE_CONTACTO.jpg" alt="Imagen que representa la comunicación" style="max-width: 100%; height: auto; margin-bottom: 20px;">
+        <img src="contacto.png" alt="Imagen que representa la comunicación" style="max-width: 100%; height: auto; margin-bottom: 20px;">
         <p>Si tienes un caso que necesita apoyo o deseas unirte a nuestra causa, contáctanos:</p>
         <p>WhatsApp: <a href="https://wa.me/5215520841834" target="_blank">5520841834</a></p>
         <p>Email: <a href="mailto:caminosdelibertadac@gmail.com">caminosdelibertadac@gmail.com</a></p>
@@ -63,3 +63,4 @@
 
 </body>
 </html>
+
