--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="logocaminos.png" alt="Logo de Caminos de Libertad A.C." class="logo-main">
         <h1>Apoya a Caminos de Libertad A.C.</h1>
         <p>Tu donación nos permite defender legalmente a personas inocentes en México.</p>
-        <img src="donar.jpeg" alt="Imagen de donación" style="max-width: 100%; height: auto; margin-bottom: 20px;">
+        <img src="donar2.jpeg" alt="Imagen de donación" style="max-width: 100%; height: auto; margin-bottom: 20px;">
         <a href="https://paypal.me/CAMINOSDELIBERTAD" class="donation-button">Donar Ahora</a>
     </div>
 
@@ -63,4 +63,5 @@
 
 </body>
 </html>
+
 
